--- a/index.html
+++ b/index.html
@@ -7,58 +7,59 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="card">
-        <div class="heart"></div>
-        <h1>Happy Valentines</h1>
-        <p> You deserve the world and MORE ❣️ </p>
-
-        <!--CONFIRMATION-->
-        <button id="confirmLove" class="yes-button"> Do you love me?</button>
-        <div id="activitySection" class="hidden">
-            <label for="activity">Choose our Valentine's activity:</label>
-            <select id="activity">
-                <option value="dinner">Silly Dinner 🤯</option>
-                <option value="movie">Movies 😋</option>
-                <option value="bowling">Freaky Bowling 😉</option>
-            </select>
-            <button id="showActivity">Show Activity</button>
-            <div id="activityMessage" class="hidden"></div>
-        </div>
-
-        <!--Surprise Message-->
-        <button id="revealMessage">Click for a Surpise grr</button>
-        <div id="hiddenMessage" class="hidden">
-            <p>You're the best person in my life, i truly value your presense in my life.</p>
-         </div>
-    </div>
-
-    <!--BG Music-->
-    <audio id="backgroundMusic" loop>
-        <source src="valentine-music.mp3" type="audio/mpeg">
-        Your Browser does not support the audio element.
-    </audio>
-    <button id="toggleMusic">Play Music</button>
-
-    <!-- Music Cover Flow -->
-    <div id="musicCoverFlow" class="hidden">
-        <label for="songSelector">Pick a Song:</label>
-        <select id="songSelector">
-            <option value="all-i-need.mp3">All I Need - Radiohead</option>
-            <option value="is-it-really-you.mp3">Is It Really You? - Loathe</option>
-            <option value="luna-2011.mp3">Luna (2011 Remake) - The Smashing Pumpkins</option>
-            <option value="soren.mp3">Soren - Beabadoobe</option>
-            <option value="iris.mp3">Iris - The Goo Goo Dolls</option>
-            <option value="glide.mp3">Glide - Lily Chou-Chou</option>
-            <option value="20191009-i-like-her.mp3">20191009 I Like Her - Mac DeMarco</option>
-            <option value="reality-surf.mp3">Reality Surf - Bladee</option>
-            <option value="futile-devices.mp3">Futile Devices (Doveman Remix) - Sufjan Stevens</option>
-            <option value="option.mp3">Option - Crosses</option>
-        </select>
-        <div id="coverArt">
-            <img id="coverImage" src="" alt="Album Cover">
+    <!-- 3D Music Cover Flow - Initially visible -->
+    <div id="coverFlowContainer">
+        <div id="coverFlow">
+            <div class="cover" data-src="all-i-need.mp3" style="background-image: url('https://raw.githubusercontent.com/rokstarss/rubyvalentines/main/images/all-i-need.jpg');"></div>
+            <div class="cover" data-src="is-it-really-you.mp3" style="background-image: url('https://raw.githubusercontent.com/rokstarss/rubyvalentines/main/images/is-it-really-you.jpg');"></div>
+            <div class="cover" data-src="luna-2011.mp3" style="background-image: url('https://raw.githubusercontent.com/rokstarss/rubyvalentines/main/images/luna-2011.jpg');"></div>
+            <div class="cover" data-src="soren.mp3" style="background-image: url('https://raw.githubusercontent.com/rokstarss/rubyvalentines/main/images/soren.jpg');"></div>
+            <div class="cover" data-src="iris.mp3" style="background-image: url('https://raw.githubusercontent.com/rokstarss/rubyvalentines/main/images/iris.jpg');"></div>
+            <div class="cover" data-src="glide.mp3" style="background-image: url('https://raw.githubusercontent.com/rokstarss/rubyvalentines/main/images/glide.jpg');"></div>
+            <div class="cover" data-src="20191009-i-like-her.mp3" style="background-image: url('https://raw.githubusercontent.com/rokstarss/rubyvalentines/main/images/20191009-i-like-her.jpg');"></div>
+            <div class="cover" data-src="reality-surf.mp3" style="background-image: url('https://raw.githubusercontent.com/rokstarss/rubyvalentines/main/images/reality-surf.jpg');"></div>
+            <div class="cover" data-src="futile-devices.mp3" style="background-image: url('https://raw.githubusercontent.com/rokstarss/rubyvalentines/main/images/futile-devices.jpg');"></div>
+            <div class="cover" data-src="option.mp3" style="background-image: url('https://raw.githubusercontent.com/rokstarss/rubyvalentines/main/images/option.jpg');"></div>
         </div>
         <audio id="selectedSong" controls></audio>
+        <button id="proceedButton" class="hidden">Proceed</button>
     </div>
+
+    <!-- Rest of the content - Initially hidden -->
+    <div id="mainContent" class="hidden">
+        <div class="card">
+            <div class="heart"></div>
+            <h1>Happy Valentines</h1>
+            <p>You deserve the world and MORE ❣️</p>
+
+            <!--CONFIRMATION-->
+            <button id="confirmLove" class="yes-button">Do you love me?</button>
+            <div id="activitySection" class="hidden">
+                <label for="activity">Choose our Valentine's activity:</label>
+                <select id="activity">
+                    <option value="dinner">Silly Dinner 🤯</option>
+                    <option value="movie">Movies 😋</option>
+                    <option value="bowling">Freaky Bowling 😉</option>
+                </select>
+                <button id="showActivity">Show Activity</button>
+                <div id="activityMessage" class="hidden"></div>
+            </div>
+
+            <!--Surprise Message-->
+            <button id="revealMessage">Click for a Surprise grr</button>
+            <div id="hiddenMessage" class="hidden">
+                <p>You're the best person in my life, I truly value your presence in my life.</p>
+            </div>
+        </div>
+
+        <!--BG Music-->
+        <audio id="backgroundMusic" loop>
+            <source src="valentine-music.mp3" type="audio/mpeg">
+            Your Browser does not support the audio element.
+        </audio>
+        <button id="toggleMusic">Play Music</button>
+    </div>
+
 </body>
 <script src="script.js"></script>
 </html>
