--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,6 +24,9 @@
         </div>
         <audio id="selectedSong" controls></audio>
         <button id="proceedButton" class="hidden">Proceed</button>
+        <div id="smallButtonContainer" class="hidden">
+            <button id="smallButton">Small Button</button>
+        </div>
     </div>
 
     <!-- Rest of the content - Initially hidden -->
@@ -30,14 +34,14 @@
         <div class="card">
             <div class="heart"></div>
             <h1>Happy Valentines</h1>
-            <p>You deserve the world and MORE ❣️</p>
+            <p>Ruby deserve the world and MORE, Id like to use this site to ask to be your valentine. ❣️</p>
 
             <!--CONFIRMATION-->
             <button id="confirmLove" class="yes-button">Do you love me?</button>
             <div id="activitySection" class="hidden">
                 <label for="activity">Choose our Valentine's activity:</label>
                 <select id="activity">
-                    <option value="dinner">Silly Dinner 🤯</option>
+                    <option value="dinner">Silly Dinner/Or Lunch 🤯</option>
                     <option value="movie">Movies 😋</option>
                     <option value="bowling">Freaky Bowling 😉</option>
                 </select>
@@ -48,7 +52,7 @@
             <!--Surprise Message-->
             <button id="revealMessage">Click for a Surprise grr</button>
             <div id="hiddenMessage" class="hidden">
-                <p>You're the best person in my life, I truly value your presence in my life.</p>
+                <p>Ruby, You're the best person in my life, and I truly value your presence in my life.</p>
             </div>
         </div>
 
