--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <audio id="selectedSong" controls></audio>
         <button id="proceedButton" class="hidden">Proceed</button>
         <div id="smallButtonContainer" class="hidden">
-            <button id="smallButton">Small Button</button>
+            <button id="smallButton">Song Selection</button>
         </div>
     </div>
 
